clang/test/BSC/Negative/SafeZone/reborrow_restriction/safezone_reborrow_restriction.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

_Safe void read_by_value(int);
_Safe void read_by_borrow(const int *borrow);

_Safe void non_lexical_lifetime(int x) {
    int *borrow ref = &mut x;
    const int *borrow cref = ref; // expected-note {{`*ref` is borrowed here}}
    ++*ref; // expected-error {{cannot assign to `*ref` because it is borrowed}}
    read_by_value(*cref); 
}

_Safe void non_lexical_lifetime_limitation(int x) {
    int *borrow ref = &mut x; // expected-note {{`x` is borrowed here}}
    // explicitly define an immutable reference
    const int *borrow cref = ref;
    // ref does not expire here, even without any modification
    read_by_value(x); // expected-error {{cannot use `x` because it was mutably borrowed}}
    read_by_value(*cref);
}

// re-borrow in function arguments
_Safe void accept_immutable(const int *borrow); // expected-note 2 {{passing argument to parameter here}}
_Safe void accept_mutable(int *borrow); // expected-note 3 {{passing argument to parameter here}}

// re-borrow when return value
_Safe int *ret_raw(void);
_Safe const int *borrow ret_immutable(const int *borrow);
_Safe int *owned ret_own(void);

_Safe void raw2immutable(int *ptr) {
    const int *borrow cref = ptr; // expected-error {{conversion from type 'int *' to 'const int *borrow' is forbidden in the safe zone}}
    accept_immutable(ptr); // expected-error {{conversion from type 'int *' to 'const int *borrow' is forbidden in the safe zone}}
    const int *borrow cref2 = ret_raw(); // expected-error {{conversion from type 'int *' to 'const int *borrow' is forbidden in the safe zone}}
}

_Safe int *owned own2immutable(int *owned ptr) {
    const int *borrow cref = ptr; // expected-error {{conversion from type 'int *owned' to 'const int *borrow' is forbidden in the safe zone}}
    accept_immutable(ptr); // expected-error {{conversion from type 'int *owned' to 'const int *borrow' is forbidden in the safe zone}}
    const int *borrow cref2 = ret_own(); // expected-error {{conversion from type 'int *owned' to 'const int *borrow' is forbidden in the safe zone}}
    return ptr;
}

_Safe void immutable2mutable(const int *borrow cref) {
    int *borrow ref = cref; // expected-error {{conversion from type 'const int *borrow' to 'int *borrow' is forbidden in the safe zone}}
    accept_mutable(cref); // expected-error {{conversion from type 'const int *borrow' to 'int *borrow' is forbidden in the safe zone}}
    int dummy = 0;
    int *borrow ref2 = ret_immutable(&const dummy); // expected-error {{conversion from type 'const int *borrow' to 'int *borrow' is forbidden in the safe zone}}
}

_Safe void raw2mutable(int *ptr) {
    int *borrow ref = ptr; // expected-error {{conversion from type 'int *' to 'int *borrow' is forbidden in the safe zone}}
    accept_mutable(ptr); // expected-error {{conversion from type 'int *' to 'int *borrow' is forbidden in the safe zone}}
    int *borrow ref2 = ret_raw(); // expected-error {{conversion from type 'int *' to 'int *borrow' is forbidden in the safe zone}}
}

_Safe int *owned own2mutable(int *owned ptr) {
    int *borrow ref = ptr; // expected-error {{conversion from type 'int *owned' to 'int *borrow' is forbidden in the safe zone}}
    accept_mutable(ptr); // expected-error {{conversion from type 'int *owned' to 'int *borrow' is forbidden in the safe zone}}
    int *borrow ref2 = ret_own(); // expected-error {{conversion from type 'int *owned' to 'int *borrow' is forbidden in the safe zone}}
    return ptr;
}
